// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraud protection rule toggle tests renders correctly when disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-0__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-0"
            >
              Test rule toggle
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-0__help"
          >
            When enabled, the payment method will be blocked.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fraud-protection-rule-toggle"
    >
      <strong>
        Enable filtering
      </strong>
      <div
        class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
      >
        <div
          class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
        >
          <span
            class="components-form-toggle"
          >
            <input
              aria-describedby="inspector-toggle-control-0__help"
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-0"
          >
            Test rule toggle
          </label>
        </div>
        <p
          class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
          id="inspector-toggle-control-0__help"
        >
          When enabled, the payment method will be blocked.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Fraud protection rule toggle tests renders correctly when enabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                aria-describedby="inspector-toggle-control-1__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-1"
            >
              Test rule toggle
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-1__help"
          >
            The payment will be blocked.
          </p>
        </div>
        <div>
          test content
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fraud-protection-rule-toggle"
    >
      <strong>
        Enable filtering
      </strong>
      <div
        class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
      >
        <div
          class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              aria-describedby="inspector-toggle-control-1__help"
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-1"
          >
            Test rule toggle
          </label>
        </div>
        <p
          class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
          id="inspector-toggle-control-1__help"
        >
          The payment will be blocked.
        </p>
      </div>
      <div>
        test content
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Fraud protection rule toggle tests renders correctly when enabled and blocked 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                aria-describedby="inspector-toggle-control-2__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-2"
            >
              Test rule toggle
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-2__help"
          >
            The payment will be blocked.
          </p>
        </div>
        <div>
          test content
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fraud-protection-rule-toggle"
    >
      <strong>
        Enable filtering
      </strong>
      <div
        class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
      >
        <div
          class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              aria-describedby="inspector-toggle-control-2__help"
              class="components-form-toggle__input"
              id="inspector-toggle-control-2"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-2"
          >
            Test rule toggle
          </label>
        </div>
        <p
          class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
          id="inspector-toggle-control-2__help"
        >
          The payment will be blocked.
        </p>
      </div>
      <div>
        test content
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
